# starscape-server

./: .gitignore  Cargo.toml  LICENSE  hacking.md  math.md  readme.md  starscape.toml
deploy/: package-web-dist.sh  readme.md  starscape.service  starscape.toml
src/: body.rs  conduit.rs  connection.rs  entity.rs  game.rs  god.rs  main.rs  object.rs  physics.rs  property.rs  serialize.rs  ship.rs  state.rs  value.rs
src/components/: body.rs  god.rs  mod.rs  ship.rs
src/connection/: bundle_handler.rs  connection.rs  connection_collection.rs  connection_impl.rs  connection_trait.rs  decodable.rs  decode.rs  decoded.rs  decoder.rs  encodable.rs  encode.rs  encoder.rs  event.rs  format.rs  inbound_message_handler.rs  json_protocol.rs  message_handlers.rs  mod.rs  object_map.rs  object_map_trait.rs  outbound_message_handler.rs  protocol.rs  request.rs  request_error.rs  value.rs
src/engine/: component_key.rs  conduit_subscriber_list.rs  element.rs  engine.rs  engine_config.rs  entity.rs  event_element.rs  id.rs  mod.rs  notif_queue.rs  object.rs  property.rs  signal.rs  state.rs  subscribable.rs  subscriber.rs  subscriber_list.rs  subscription.rs  subscription_impl.rs  subscription_tracker.rs  sync_subscriber_list.rs  value.rs
src/entity/: entity.rs  entity_store.rs  entity_store_impl.rs  mod.rs  property.rs  property_impl.rs
src/game/: autopilot.rs  game.rs  game_config.rs  mod.rs  physics.rs
src/helpers/: color_rgb.rs  config.rs  datagram_splitter.rs  filesystem.rs  format_slotmap_key.rs  initializable.rs  metronome.rs  mod.rs  or_log.rs  short_type_name.rs  test_helpers.rs  thin_ptr.rs
src/network/: mio_poll_thread.rs  mod.rs  (+4 more)
(+149 files in other folders)
