[package]
name = "starscape-server"
version = "0.1.0"
authors = ["Sophie Winter <wm@wmww.sh>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.8"
slotmap = "0.4"
anymap = "0.12"
bimap = "0.4"
weak-self = "1.0"
cgmath = "0.17"
serde_json = "1.0"
serde = "1.0"
ctrlc = "3.1"
mio = "0.6"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
warp = { version = "0.2", features = ["tls"] }
webrtc-unreliable = "0.5"
get_if_addrs = "0.5"
config = "0.9"
