[package]
name = "starscape-server"
version = "0.1.0"
authors = ["Sophie Winter <so@phie.me>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.10"
slotmap = "1.0"
derivative = "2.2"
anymap = "0.12"
bimap = "0.6"
weak-self = "1.0"
cgmath = "0.18"
serde_json = "1.0"
serde = "1.0"
ctrlc = "3.2"
mio = "0.6"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
warp = { version = "0.2", features = ["tls"] }
webrtc-unreliable = "0.5"
get_if_addrs = "0.5"
lazy_static = "1.4"
toml = "0.5"
webbrowser = "0.8"
