[package]
name = "starscape-server"
version = "0.1.0"
authors = ["Sophie Winter <git@phie.me>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.10"
slotmap = "1"
derivative = "2"
bimap = "0.6"
weak-self = "1"
cgmath = "0.18"
serde_json = "1"
serde = "1"
ctrlc = "3"
mio = "0.6"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = { version = "0.3", features = ["tls"] }
webrtc-unreliable = "0.5"
get_if_addrs = "0.5"
lazy_static = "1"
toml = "0.7"
webbrowser = "0.8"
